@@ -1,6 +1,7 @@
 2009-03-13  Badlop  <badlop@process-one.net>
 
-	* src/web/ejabberd_http_bind.erl: Fix remote-stream-error stanzas
+	* src/web/ejabberd_http_bind.erl: Missing stream:error in the
+	returned remote-stream-error stanza (EJAB-902)
 
 2009-02-14  Badlop  <badlop@process-one.net>
 
