@@ -1,3 +1,8 @@
+2009-03-27  Badlop  <badlop@process-one.net>
+
+	* src/web/ejabberd_http_bind.erl: Missing stream:error in the
+	returned remote-stream-error stanza (EJAB-902)
+
 2009-01-13  Badlop  <badlop@process-one.net>
 
 	* src/web/ejabberd_http_bind.erl: Include condition in http-bind
